Fixes contribution docs inconsistencies

--- a/docs/docs/contribute/contributing-guide.mdx
+++ b/docs/docs/contribute/contributing-guide.mdx
@@ -29,7 +29,7 @@ Typos are embarrassing! Most PRs that fix typos will be accepted immediately. To
 - **DO** keep discussions focused. When a new or related topic comes up, it's often better to create a new issue than to side-track the conversation.
 - **DO NOT** submit PRs for coding style changes. These changes can cause unnecessary conflicts and make the review process more complicated.
 - **DO NOT** surprise us with big PRs. Instead, file an issue and start a discussion so we can agree on a direction before you invest a large amount of time.
-- **DO NOT** commit code you didn't write. We encourage you to contribute your own work to maintain
+- **DO NOT** commit code you didn't write. We encourage you to contribute your own work to maintain project quality and integrity.
 
 ## Contribution paths
 
