--- a/docs/docs/contribute/expect-during-pr.mdx
+++ b/docs/docs/contribute/expect-during-pr.mdx
@@ -10,6 +10,7 @@ This article aims to provide an understanding of how we review pull requests, wh
 
 Once you submit a PR, one of our maintainers will examine it and check if the PR build has passed. The automated checks include:
 
+- Successful docs build
 - Successful code build
 - Passing automated tests with 100% coverage
 - Absence of issues caught by our linter (ensuring adherence to naming conventions and code consistency)
