Extends spo SPFx commands commands with support for adding description option. Closes #6706

--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-add.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-add.mdx
@@ -22,6 +22,9 @@ m365 spo applicationcustomizer add [options]
 `-i, --clientSideComponentId <clientSideComponentId>`
 : Client-side component ID of the application customizer (GUID).
 
+`--description [description]`
+: Description of the application customizer.
+
 `--clientSideComponentProperties [clientSideComponentProperties]`
 : JSON string with application customizer properties.
 
