--- a/docs/docs/cmd/spo/commandset/commandset-add.mdx
+++ b/docs/docs/cmd/spo/commandset/commandset-add.mdx
@@ -27,6 +27,9 @@ m365 spo commandset add [options]
 `-i, --clientSideComponentId <clientSideComponentId>`
 : The Client Side Component Id (GUID) of the ListView Command Set.
 
+`--description [description]`
+: Description of the ListView Command Set.
+
 `--clientSideComponentProperties [clientSideComponentProperties]`
 : The Client Side Component properties of the ListView Command Set.
 
