--- a/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-set.mdx
+++ b/docs/docs/cmd/spo/applicationcustomizer/applicationcustomizer-set.mdx
@@ -28,6 +28,9 @@ m365 spo applicationcustomizer set [options]
 `--newTitle [newTitle]`
 : The new title of the Application Customizer.
 
+`--description [description]`
+: Description of the application customizer. Specify an empty string to clear.
+
 `-p, --clientSideComponentProperties  [clientSideComponentProperties]`
 : The Client Side Component properties of the Application Customizer.
 
