Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -16,6 +16,8 @@ sidebar_position: 4
 
 - migrated [docs](../cmd/docs.mdx) to Zod [#6915](https://github.com/pnp/cli-microsoft365/issues/6915)
 - migrated [entra multitenant add](../cmd/entra/multitenant/multitenant-add.mdx) to Zod [#6906](https://github.com/pnp/cli-microsoft365/issues/6906)
+- added [sample script](../sample-scripts/spo/list-tenant-alert-usage/index.mdx) to list all deprecated SharePoint list alerts across the tenant [#6864](https://github.com/pnp/cli-microsoft365/issues/6864)
+- enhanced SPFx commands to set a description for application customizers and ListView Command Sets [#6706](https://github.com/pnp/cli-microsoft365/issues/6706)
 
 ## [v11.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.1.0)
 
