--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -18,6 +18,7 @@ sidebar_position: 4
 - migrated [entra multitenant add](../cmd/entra/multitenant/multitenant-add.mdx) to Zod [#6906](https://github.com/pnp/cli-microsoft365/issues/6906)
 - added [sample script](../sample-scripts/spo/list-tenant-alert-usage/index.mdx) to list all deprecated SharePoint list alerts across the tenant [#6864](https://github.com/pnp/cli-microsoft365/issues/6864)
 - enhanced SPFx commands to set a description for application customizers and ListView Command Sets [#6706](https://github.com/pnp/cli-microsoft365/issues/6706)
+- added minimal permissions for 'entra groupsettingtemplate' commands [#6938](https://github.com/pnp/cli-microsoft365/issues/6938)
 
 ## [v11.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.1.0)
 
