Updates contributors. Closes #7043

--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -180,6 +180,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: ''
   },
   {
+    name: 'Ayush Jain',
+    company: '',
+    github: 'URAYUSHJAIN',
+    x: 'urayushjain'
+  },
+  {
     name: 'Balamurugan Kailasam',
     company: '',
     github: 'clientbala',
@@ -288,13 +294,19 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: 'eliostruyf'
   },
   {
-    name: 'Erwin van Hunen ',
+    name: 'Erwin van Hunen',
     company: 'Valo Intranet',
     github: 'erwinvanhunen',
     x: 'erwinvanhunen'
   },
   {
-    name: 'Fredrik Thorild ',
+    name: 'Fahad',
+    company: 'CTS',
+    github: 'codevfahad',
+    x: ''
+  },
+  {
+    name: 'Fredrik Thorild',
     company: 'Sogeti Sweden',
     github: 'fthorild',
     x: 'taxonomythorild'
@@ -312,7 +324,7 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: 'garrytrinder'
   },
   {
-    name: 'Gaston Flores ',
+    name: 'Gaston Flores',
     company: 'Flybondi',
     github: 'gaston-flores',
     x: ''
@@ -444,6 +456,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: 'LuiseFreese'
   },
   {
+    name: 'Malay Kumar',
+    company: '',
+    github: 'Malay-dev',
+    x: ''
+  },
+  {
     name: 'Mark Powney',
     company: 'Valo Intranet',
     github: 'mpowney',
@@ -550,6 +568,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     company: '2toLead',
     github: 'nirav-raval',
     x: 'nrvrvl'
+  },
+  {
+    name: 'Nishkalank Bezawada',
+    company: 'Xenit AB',
+    github: 'NishkalankBezawada',
+    x: 'im_nishkalank'
   },
   {
     name: 'Otto',
@@ -690,6 +714,18 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     x: 'romanrozinov'
   },
   {
+    name: 'Sanket Mundra',
+    company: 'Traceable AI',
+    github: 'sanket-mundra',
+    x: 'MundraSanket'
+  },
+  {
+    name: 'Santhosh Teja Piridi',
+    company: '',
+    github: 'santhosh-7777',
+    x: ''
+  },
+  {
     name: 'Saurabh Tripathi',
     company: 'Avanade Inc.',
     github: 'Saurabh7019',
@@ -724,6 +760,12 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
     company: '',
     github: 'siddharth-vaghasia',
     x: 'siddh_me'
+  },
+  {
+    name: 'Siddheya Kulkarni',
+    company: '',
+    github: 'Asymtode712',
+    x: 'SidKulkarni712'
   },
   {
     name: 'Simon Ågren',
