Enforces delegated access token for onenote commands. Closes #7049

--- a/docs/docs/cmd/onenote/notebook/notebook-add.mdx
+++ b/docs/docs/cmd/onenote/notebook/notebook-add.mdx
@@ -36,6 +36,23 @@ m365 onenote notebook add [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                                                      |
+  |-----------------|------------------------------------------------------------------|
+  | Microsoft Graph | Notes.Create, Sites.Read.All, User.ReadBasic.All, Group.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  This command does not support application permissions.
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Create a Microsoft OneNote notebook for the currently logged in user
