--- a/docs/docs/cmd/onenote/notebook/notebook-list.mdx
+++ b/docs/docs/cmd/onenote/notebook/notebook-list.mdx
@@ -33,6 +33,23 @@ m365 onenote notebook list [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                                                        |
+  |-----------------|--------------------------------------------------------------------|
+  | Microsoft Graph | Notes.Read.All, Sites.Read.All, User.ReadBasic.All, Group.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  This command does not support application permissions.
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 List Microsoft OneNote notebooks for the currently logged in user
