Extends container get command

--- a/docs/docs/cmd/spe/container/container-get.mdx
+++ b/docs/docs/cmd/spe/container/container-get.mdx
@@ -15,8 +15,11 @@ m365 spe container get [options]
 ## Options
 
 ```md definition-list
-`-i, --id <id>`
-: The Id of the container instance.
+`-i, --id [id]`
+: The Id of the container instance. Specify either `id` or `name` but not both.
+
+`-n, --name [name]`
+: Display name of the container. Specify either `id` or `name` but not both.
 ```
 
 <Global />
@@ -42,10 +45,16 @@ m365 spe container get [options]
 
 ## Examples
 
-Gets a container of a specific type.
+Gets a container of a specific type by id.
 
 ```sh
 m365 spe container get --id "b!ISJs1WRro0y0EWgkUYcktDa0mE8zSlFEqFzqRn70Zwp1CEtDEBZgQICPkRbil_5Z"
+```
+
+Gets a container of a specific type by display name.
+
+```sh
+m365 spe container get --name "My Application Storage Container"
 ```
 
 ## Response
