Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,19 @@ sidebar_position: 4
 
 # Release notes
 
+## v11.3.0 (Beta)
+
+### New commands
+
+### Changes
+
+- Fixes [docs](../contribute/contributing-guide.mdx) contributing guide inconsistencies
+- Removes deprecated onBrokenMarkdownLinks docs config
+- Enforces delegated access token for onenote commands [#7049](https://github.com/pnp/cli-microsoft365/issues/7049)
+- Updates [login](../cmd/login.mdx) command documentation [#3725](https://github.com/pnp/cli-microsoft365/issues/3725)
+
+# Release notes
+
 ## [v11.2.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.2.0)
 
 ### New commands
