--- a/docs/docs/about/team.mdx
+++ b/docs/docs/about/team.mdx
@@ -727,7 +727,7 @@ Do you want to know the curious and bright minds behind the CLI for Microsoft 36
   },
   {
     name: 'Saurabh Tripathi',
-    company: 'Avanade Inc.',
+    company: 'AFRY AB',
     github: 'Saurabh7019',
     x: 'saurabh7019'
   },
