Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -10,10 +10,12 @@ sidebar_position: 4
 
 ### Changes
 
-- Fixes [docs](../contribute/contributing-guide.mdx) contributing guide inconsistencies
-- Removes deprecated onBrokenMarkdownLinks docs config
-- Enforces delegated access token for onenote commands [#7049](https://github.com/pnp/cli-microsoft365/issues/7049)
-- Updates [login](../cmd/login.mdx) command documentation [#3725](https://github.com/pnp/cli-microsoft365/issues/3725)
+- fixed [docs](../contribute/contributing-guide.mdx) contributing guide inconsistencies
+- removed deprecated onBrokenMarkdownLinks docs config
+- enforced delegated access token for OneNote commands [#7049](https://github.com/pnp/cli-microsoft365/issues/7049)
+- updated [login](../cmd/login.mdx) command documentation [#3725](https://github.com/pnp/cli-microsoft365/issues/3725)
+- added support for SPFx v1.22.0 and v1.22.1
+- extended 'spfx doctor' with support for heft
 
 # Release notes
 
